1. Make ref ID always display fully to allocated width, break if too long; 2. Change 'Go back in time' tooltip to 'Previous ref'; 3. In graph, if link exists, when clicked, make link open in new tab in graph after click on tooltip; 4. Disable selection for all widget element; 5. Fix general bugs.

--- a/src/index.scss
+++ b/src/index.scss
@@ -61,6 +61,9 @@ body
   transition: 0.3s;
   // border: 1px solid red;
 
+  * 
+  { user-select: none; }
+
   .dropdown
   {
     height: auto;
@@ -84,17 +87,34 @@ body
     height: auto;
     z-index: 3;
     transition: 0.3s;
-    user-select: none;
     
     
     &:hover
     { background: $theme-bg-color-hover; }
+
+    .refIDWrapper
+    {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      width: 80%;
+
+      .ref-identifier
+      {
+        transition: 0.3s;
+        max-width: 100%;
+        word-wrap: break-word;
+        text-align: center;
+        align-self: flex-start;
+      }
+    }
 
     .caret-icon
     {
       font-weight: bold;
       transition: 0.3s;
       transform: rotate(90deg);
+      align-self: center;
     }
 
     .flip-caret-icon
@@ -399,13 +419,14 @@ body
 
 .tool-tip
 {
-  top: -20px;
+  top: 70%;
   z-index: 5;
   cursor: pointer;
 
   &:hover
   { 
-    background: $dropdown-bg; color: #222;
+    background: $dropdown-bg;
+    color: #222;
   }
 
   &::after
